@@ -13,6 +13,7 @@ import org.shsts.tinactory.api.tech.ITechnology;
 import javax.annotation.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -92,7 +93,8 @@ public class Technology implements ITechnology {
     }
 
     public static final Codec<Technology> CODEC = RecordCodecBuilder.create(instance -> instance.group(
-            ResourceLocation.CODEC.listOf().optionalFieldOf("depends", List.of()).forGetter(tech -> tech.dependIds),
+            ResourceLocation.CODEC.listOf().optionalFieldOf("depends", Collections.emptyList())
+                    .forGetter(tech -> tech.dependIds),
             Codec.LONG.fieldOf("max_progress").forGetter(tech -> tech.maxProgress),
             Codec.unboundedMap(Codec.STRING, Codec.INT).fieldOf("modifiers").forGetter(tech -> tech.modifiers),
             ForgeRegistries.ITEMS.getCodec().fieldOf("display_item").forGetter(tech -> tech.displayItem)
